Changelog for s6-rc.

In 0.3.0.0
----------

 - s6-rc-init now takes a -s option that adds a suffix to the symbolic links
created in the scandir to manage longruns. This allows the user to use the
same scandir for several s6-rc databases and live directories without risking
conflicts, if the suffixes are unique enough.
 - Bugfixes.


In 0.2.1.2
----------

 - Bugfix release.
 - s6-rc's verbosity has been adjusted. (-v2 is less verbose, -v3 is
what the previous -v2 was, -v4 is still extremely verbose.)


In 0.2.1.1
----------

 - Bugfix release.


In 0.2.1.0
----------

 - Timeouts for oneshots have been increased to 30 seconds.
 - s6-rc now sends an explicit "s6-svc -d" to a longrun when an
up transition fails.
 - s6-rc now kills subprocesses waiting on longrun transitions
when it receives a SIGINT or a SIGTERM.
   + Those two changes combined ensure that a user can interrupt
a transition that is blocked in a "service is not-ready" limbo, and
bring back the service to a known "down" state.


In 0.2.0.1
----------

 - Bugfix release.
 - Support for timeout-kill (in s6-2.5.1.0).


In 0.2.0.0
----------

 - Added this NEWS file. :)
 - Major types overhaul to make them more POSIXly correct:
compatibility with skalibs-2.5.0.0.
 - s6-2.5.0.0 now allows longruns to report permanent failures
(when ./finish exits 125). s6-rc should pick that up automatically
and fail a longrun transition when it's the case.
 - s6-rc commands taking a lock on the live directory or the service
database now fail instantly if they're already locked. A -b option
has been added to give them the "block and wait for the lock to be
released" behaviour back.
 - Easier external interaction with the hidden s6rc-fdholder
service: the list of pipes to autofill a new fdholder with is now
taken from the data/autofilled file (previously: was a hardcoded
command line in the s6rc-fdholder run script).