@@ -39,7 +39,7 @@ dependency bumped to 2.6.0.1. </li>
 dependency bumped to 2.3.0.3. </li>
  <li> <a href="//skarnet.org/software/s6/">s6</a>
 dependency bumped to 2.6.1.1. </li>
- <li> New <tt>-s</tt> option to <a href="s6-rc-init.html">s6-rc-init</a>
+ <li> New <tt>-p</tt> option to <a href="s6-rc-init.html">s6-rc-init</a>
 to allow using several live directories with the same scandir. </li>
 </ul>
 
