@@ -5,8 +5,8 @@ s6rc_db_read.o
 s6rc_db_read_sizes.o
 s6rc_db_read_uint32.o
 s6rc_graph_closure.o
-s6rc_livedir_suffix.o
-s6rc_livedir_suffixsize.o
+s6rc_livedir_prefix.o
+s6rc_livedir_prefixsize.o
 s6rc_lock.o
 s6rc_read_uint.o
 s6rc_sanitize_dir.o
