@@ -5,16 +5,16 @@
 #include <s6/s6-supervise.h>
 #include <s6-rc/s6rc-servicedir.h>
 
-void s6rc_servicedir_unsupervise (char const *live, char const *suffix, char const *name, int keepsupervisor)
+void s6rc_servicedir_unsupervise (char const *live, char const *prefix, char const *name, int keepsupervisor)
 {
   size_t livelen = strlen(live) ;
-  size_t suffixlen = strlen(suffix) ;
+  size_t prefixlen = strlen(prefix) ;
   size_t namelen = strlen(name) ;
-  char fn[livelen + 14 + namelen + suffixlen] ;
+  char fn[livelen + 14 + prefixlen + namelen] ;
   memcpy(fn, live, livelen) ;
   memcpy(fn + livelen, "/scandir/", 9) ;
-  memcpy(fn + livelen + 9, name, namelen) ;
-  memcpy(fn + livelen + 9 + namelen, suffix, suffixlen + 1) ;
+  memcpy(fn + livelen + 9, prefix, prefixlen) ;
+  memcpy(fn + livelen + 9 + prefixlen, name, namelen + 1) ;
   unlink(fn) ;
   if (!keepsupervisor)
   {
