@@ -42,8 +42,8 @@ static unsigned int n ;
 static unsigned char *state ;
 static unsigned int *pendingdeps ;
 static tain_t deadline ;
-static size_t suffixlen ;
-static char *suffix ;
+static size_t prefixlen ;
+static char *prefix ;
 static char dryrun[UINT_FMT] = "" ;
 
 static inline void announce (void)
@@ -132,15 +132,15 @@ static pid_t start_longrun (unsigned int i, int h)
   unsigned int m = 0 ;
   char fmt[UINT32_FMT] ;
   char vfmt[UINT_FMT] ;
-  char servicefn[livelen + svdlen + suffixlen + 26] ;
+  char servicefn[livelen + prefixlen + svdlen + 26] ;
   char const *newargv[7 + !!dryrun[0] * 6] ;
   memcpy(servicefn, live, livelen) ;
   memcpy(servicefn + livelen, "/scandir/", 9) ;
-  memcpy(servicefn + livelen + 9, db->string + db->services[i].name, svdlen) ;
-  memcpy(servicefn + livelen + 9 + svdlen, suffix, suffixlen) ;
+  memcpy(servicefn + livelen + 9, prefix, prefixlen) ;
+  memcpy(servicefn + livelen + 9 + prefixlen, db->string + db->services[i].name, svdlen) ;
   if (h)
   {
-    memcpy(servicefn + livelen + 9 + svdlen + suffixlen, "/notification-fd", 17) ;
+    memcpy(servicefn + livelen + 9 + prefixlen + svdlen, "/notification-fd", 17) ;
     if (access(servicefn, F_OK) < 0)
     {
       h = 2 ;
@@ -148,7 +148,7 @@ static pid_t start_longrun (unsigned int i, int h)
         strerr_warnwu2sys("access ", servicefn) ;
     }
   }
-  servicefn[livelen + 9 + svdlen + suffixlen] = 0 ;
+  servicefn[livelen + 9 + prefixlen + svdlen] = 0 ;
   fmt[uint32_fmt(fmt, compute_timeout(i, !!h))] = 0 ;  
   vfmt[uint_fmt(vfmt, verbosity)] = 0 ;
   if (dryrun[0])
@@ -175,12 +175,12 @@ static void success_longrun (unsigned int i, int h)
   if (!dryrun[0])
   {
     size_t svdlen = strlen(db->string + db->services[i].name) ;
-    char fn[livelen + svdlen + suffixlen + 15] ;
+    char fn[livelen + prefixlen + svdlen + 15] ;
     memcpy(fn, live, livelen) ;
     memcpy(fn + livelen, "/scandir/", 9) ;
-    memcpy(fn + livelen + 9, db->string + db->services[i].name, svdlen) ;
-    memcpy(fn + livelen + 9 + svdlen, suffix, suffixlen) ;
-    memcpy(fn + livelen + 9 + svdlen + suffixlen, "/down", 6) ;
+    memcpy(fn + livelen + 9, prefix, prefixlen) ;
+    memcpy(fn + livelen + 9 + prefixlen, db->string + db->services[i].name, svdlen) ;
+    memcpy(fn + livelen + 9 + prefixlen + svdlen, "/down", 6) ;
     if (h)
     {
       if (unlink(fn) < 0 && verbosity)
@@ -204,12 +204,12 @@ static void failure_longrun (unsigned int i, int h)
   if (h && !dryrun[0])
   {
     size_t svdlen = strlen(db->string + db->services[i].name) ;
-    char fn[livelen + svdlen + suffixlen + 10] ;
+    char fn[livelen + prefixlen + svdlen + 10] ;
     char const *newargv[5] = { S6_EXTBINPREFIX "s6-svc", "-d", "--", fn, 0 } ;
     memcpy(fn, live, livelen) ;
     memcpy(fn + livelen, "/scandir/", 9) ;
-    memcpy(fn + livelen + 9, db->string + db->services[i].name, svdlen) ;
-    memcpy(fn + livelen + 9 + svdlen, suffix, suffixlen + 1) ;
+    memcpy(fn + livelen + 9, prefix, prefixlen) ;
+    memcpy(fn + livelen + 9 + prefixlen, db->string + db->services[i].name, svdlen + 1) ;
     if (!child_spawn0(newargv[0], newargv, (char const *const *)environ))
       strerr_warnwu2sys("spawn ", newargv[0]) ;
   }
@@ -286,12 +286,12 @@ static void on_failure (unsigned int i, int h, int crashed, unsigned int code)
 /*
 static inline void kill_oneshots (void)
 {
-  char fn[livelen + S6RC_ONESHOT_RUNNER_LEN + suffixlen + 10] ;
+  char fn[livelen + prefixlen + S6RC_ONESHOT_RUNNER_LEN + 10] ;
   char const *newargv[5] = { S6_EXTBINPREFIX "s6-svc", "-h", "--", fn, 0 } ;
   memcpy(fn, live, livelen) ;
   memcpy(fn + livelen, "/scandir/", 9) ;
-  memcpy(fn + livelen + 9, S6RC_ONESHOT_RUNNER, S6RC_ONESHOT_RUNNER_LEN) ;
-  memcpy(fn + livelen + 9 + S6RC_ONESHOT_RUNNER_LEN, suffix, suffixlen + 1) ;
+  memcpy(fn + livelen + 9, prefix, prefixlen) ;
+  memcpy(fn + livelen + 9 + prefixlen, S6RC_ONESHOT_RUNNER, S6RC_ONESHOT_RUNNER_LEN + 1) ;
   if (!child_spawn0(newargv[0], newargv, (char const *const *)environ))
     strerr_warnwu2sys("spawn ", newargv[0]) ;
 }
@@ -494,8 +494,8 @@ int main (int argc, char const *const *argv)
 
    /* Read the sizes of the suffix and compiled db */
 
-    if (!s6rc_livedir_suffixsize(live, &suffixlen))
-      strerr_diefu2sys(111, "read suffix size for ", live) ;
+    if (!s6rc_livedir_prefixsize(live, &prefixlen))
+      strerr_diefu2sys(111, "read prefix size for ", live) ;
     fdcompiled = open_readb(dbfn) ;
     if (!s6rc_db_read_sizes(fdcompiled, &dbblob))
       strerr_diefu3sys(111, "read ", dbfn, "/n") ;
@@ -511,22 +511,22 @@ int main (int argc, char const *const *argv)
       uint32_t depsblob[dbblob.ndeps << 1] ;
       char stringblob[dbblob.stringlen] ;
       unsigned char stateblob[n] ;
-      char suffixblob[suffixlen + 1] ;
+      char prefixblob[prefixlen + 1] ;
 
       dbblob.services = serviceblob ;
       dbblob.argvs = argvblob ;
       dbblob.deps = depsblob ;
       dbblob.string = stringblob ;
       state = stateblob ;
-      suffix = suffixblob ;
+      prefix = prefixblob ;
 
 
-     /* Read the suffix */
+     /* Read the prefix */
 
       {
-        ssize_t r = s6rc_livedir_suffix(live, suffix, suffixlen) ;
-        if (r != suffixlen) strerr_diefu2sys(111, "read suffix for ", live) ;
-        suffix[suffixlen] = 0 ;
+        ssize_t r = s6rc_livedir_prefix(live, prefix, prefixlen) ;
+        if (r != prefixlen) strerr_diefu2sys(111, "read prefix for ", live) ;
+        prefix[prefixlen] = 0 ;
       }
 
 
